--- a/src/app/book-reader/book-reader/book-reader.component.scss
+++ b/src/app/book-reader/book-reader/book-reader.component.scss
@@ -3,40 +3,40 @@
     src: url(../../../assets/fonts/Fira_Sans/FiraSans-Regular.ttf) format("truetype");
 }
 
-// @font-face {
-//     font-family: "Lato";
-//     src: url(../../../assets/fonts/Lato/Lato-Regular.ttf) format("truetype");
-// }
+@font-face {
+    font-family: "Lato";
+    src: url(../../../assets/fonts/Lato/Lato-Regular.ttf) format("truetype");
+}
 
-// @font-face {
-//     font-family: "Libre_Baskerville";
-//     src: url(../../../assets/fonts/Libre_Baskerville/LibreBaskerville-Regular.ttf) format("truetype");
-// }
+@font-face {
+    font-family: "Libre_Baskerville";
+    src: url(../../../assets/fonts/Libre_Baskerville/LibreBaskerville-Regular.ttf) format("truetype");
+}
 
-// @font-face {
-//     font-family: "Libre_Caslon";
-//     src: url(../../../assets/fonts/Libre_Caslon/LibreCaslonText-Regular.ttf) format("truetype");
-// }
+@font-face {
+    font-family: "Libre_Caslon";
+    src: url(../../../assets/fonts/Libre_Caslon/LibreCaslonText-Regular.ttf) format("truetype");
+}
 
-// @font-face {
-//     font-family: "Merriweather";
-//     src: url(../../../assets/fonts/Merriweather/Merriweather-Regular.ttf) format("truetype");
-// }
+@font-face {
+    font-family: "Merriweather";
+    src: url(../../../assets/fonts/Merriweather/Merriweather-Regular.ttf) format("truetype");
+}
 
-// @font-face {
-//     font-family: "Nanum_Gothic";
-//     src: url(../../../assets/fonts/Nanum_Gothic/NanumGothic-Regular.ttf) format("truetype");
-// }
+@font-face {
+    font-family: "Nanum_Gothic";
+    src: url(../../../assets/fonts/Nanum_Gothic/NanumGothic-Regular.ttf) format("truetype");
+}
 
-// @font-face {
-//     font-family: "Oswald";
-//     src: url(../../../assets/fonts/Oswald/Oswald-VariableFont_wght.ttf) format("truetype");
-// }
+@font-face {
+    font-family: "Oswald";
+    src: url(../../../assets/fonts/Oswald/Oswald-VariableFont_wght.ttf) format("truetype");
+}
 
-// @font-face {
-//     font-family: "RocknRoll_One";
-//     src: url(../../../assets/fonts/RocknRoll_One/RocknRollOne-Regular.ttf.ttf) format("truetype");
-// }
+@font-face {
+    font-family: "RocknRoll_One";
+    src: url(../../../assets/fonts/RocknRoll_One/RocknRollOne-Regular.ttf) format("truetype");
+}
 
 .control-container {
     padding-bottom: 5px;
