--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -79,18 +79,14 @@
             </div>
         </app-drawer>
     </div>
-
     
+    <div #readingSection class="reading-section" [@isLoading]="isLoading ? true : false">
+        <div #readingHtml [innerHtml]="page" *ngIf="page !== undefined"></div>
+    </div>
 
     <ng-container *ngIf="isLoading">
         <div class="spinner-border text-secondary loading" role="status">
             <span class="invisible">Loading...</span>
         </div>
     </ng-container>
-
-    
-    <div [innerHtml]="styles" *ngIf="styles !== undefined"></div>
-    <div #readingSection class="reading-section">
-        <div #readingHtml [innerHtml]="page" *ngIf="page !== undefined"></div> <!--class="{{darkMode ? 'dark-mode' : ''}}"-->
-    </div>
 </div>
