--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -1,6 +1,7 @@
 <div class="container-flex {{darkMode ? 'dark-mode' : ''}}">
     <div class="fixed-top">
         <div class="reading-bar row no-gutters justify-content-between">
+            <!-- TODO: Skip to content button for screen readers-->
             <button class="btn btn-outline-secondary btn-icon col-2  col-xs-1" (click)="prevPage()" title="Previous Page"><i class="fa fa-arrow-left" aria-hidden="true"></i><span class="phone-hidden">&nbsp;Previous</span></button>
             <button *ngIf="!this.adhocPageHistory.isEmpty()" class="btn btn-outline-secondary btn-icon col-2 col-xs-1" (click)="goBack()" title="Go Back"><i class="fa fa-reply" aria-hidden="true"></i><span class="phone-hidden">&nbsp;Go Back</span></button>
             <button class="btn btn-secondary col-2 col-xs-1" (click)="drawerOpen = !drawerOpen"><i class="fa fa-bars" aria-hidden="true"></i><span class="phone-hidden">&nbsp;Settings</span></button>
@@ -31,24 +32,24 @@
                         </form>
                     </div>
                     <div class="controls">
-                        <button (click)="updateFontSize(-10)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                        <label>Font Size</label>
-                        <button (click)="updateFontSize(10)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                        <button (click)="updateFontSize(-10)" class="btn btn-icon" title="Decrease" aria-labelledby="fontsize"><i class="fa fa-minus" aria-hidden="true"></i></button>
+                        <label id="fontsize">Font Size</label>
+                        <button (click)="updateFontSize(10)"  class="btn btn-icon" title="Increase" aria-labelledby="fontsize"><i class="fa fa-plus" aria-hidden="true"></i></button>
                     </div>
                     <div class="controls">
-                        <button (click)="updateLineSpacing(-10)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                        <label>Line Spacing</label>
-                        <button (click)="updateLineSpacing(10)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                        <button (click)="updateLineSpacing(-10)" class="btn btn-icon" title="Decrease" aria-labelledby="linespacing"><i class="fa fa-minus" aria-hidden="true"></i></button>
+                        <label id="linespacing">Line Spacing</label>
+                        <button (click)="updateLineSpacing(10)"  class="btn btn-icon" title="Increase" aria-labelledby="linespacing"><i class="fa fa-plus" aria-hidden="true"></i></button>
                     </div>
                     <div class="controls">
-                        <button (click)="updateMargin(5)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                        <label>Margin</label>
-                        <button (click)="updateMargin(-5)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                        <button (click)="updateMargin(-5)" class="btn btn-icon" title="Remove Margin" aria-labelledby="margin"><i class="fa fa-minus" aria-hidden="true"></i></button>
+                        <label id="margin">Margin</label>
+                        <button (click)="updateMargin(5)"  class="btn btn-icon" title="Add Margin" aria-labelledby="margin"><i class="fa fa-plus" aria-hidden="true"></i></button>
                     </div>
                     <div class="controls">
-                        <button (click)="toggleDarkMode(false)" class="btn btn-icon"><i class="fa fa-sun" aria-hidden="true"></i></button>
-                        <label>Dark Mode</label>
-                        <button (click)="toggleDarkMode(true)" class="btn btn-icon"><i class="fa fa-moon" aria-hidden="true"></i></button>
+                        <button (click)="toggleDarkMode(false)" class="btn btn-icon" aria-labelledby="darkmode"><i class="fa fa-sun" aria-hidden="true"></i></button>
+                        <label id="darkmode">Dark Mode</label>
+                        <button (click)="toggleDarkMode(true)" class="btn btn-icon" aria-labelledby="darkmode"><i class="fa fa-moon" aria-hidden="true"></i></button>
                     </div>
                     <div class="row no-gutters justify-content-between">
                         <button (click)="resetSettings()" class="btn btn-secondary col">Reset</button>
