--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -2,12 +2,12 @@
     <div class="fixed-top">
         <div class="reading-bar row no-gutters justify-content-between">
             <!-- TODO: Skip to content button for screen readers-->
-            <button class="btn btn-outline-secondary btn-icon col-2  col-xs-1" (click)="prevPage()" title="Previous Page"><i class="fa fa-arrow-left" aria-hidden="true"></i><span class="phone-hidden">&nbsp;Previous</span></button>
+            <button class="btn btn-outline-secondary btn-icon col-2  col-xs-1" (click)="prevPage()" [disabled]="pageNum === 0" title="Previous Page"><i class="fa fa-arrow-left" aria-hidden="true"></i><span class="phone-hidden">&nbsp;Previous</span></button>
             <button *ngIf="!this.adhocPageHistory.isEmpty()" class="btn btn-outline-secondary btn-icon col-2 col-xs-1" (click)="goBack()" title="Go Back"><i class="fa fa-reply" aria-hidden="true"></i><span class="phone-hidden">&nbsp;Go Back</span></button>
             <button class="btn btn-secondary col-2 col-xs-1" (click)="drawerOpen = !drawerOpen"><i class="fa fa-bars" aria-hidden="true"></i><span class="phone-hidden">&nbsp;Settings</span></button>
             <div class="book-title col-2 phone-hidden">{{bookTitle}} </div>
             <button class="btn btn-secondary col-2 col-xs-1" (click)="closeReader()"><i class="fa fa-times-circle" aria-hidden="true"></i><span class="phone-hidden">&nbsp;Close</span></button>
-            <button class="btn btn-outline-secondary btn-icon col-2  col-xs-1" (click)="nextPage()" title="Next Page"><span class="phone-hidden">Next&nbsp;</span><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+            <button class="btn btn-outline-secondary btn-icon col-2  col-xs-1" [disabled]="pageNum + 1 >= maxPages" (click)="nextPage()" title="Next Page"><span class="phone-hidden">Next&nbsp;</span><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
         </div>
         <app-drawer #commentDrawer="drawer" [isOpen]="drawerOpen" [style.--drawer-width]="'300px'" [style.--drawer-top-offset]="'38px'" [style.--drawer-background-color]="backgroundColor" (drawerClosed)="closeDrawer()">
             <div header>
@@ -81,7 +81,7 @@
         </app-drawer>
     </div>
     
-    <div #readingSection class="reading-section" [@isLoading]="isLoading ? true : false">
+    <div #readingSection class="reading-section" [@isLoading]="isLoading ? true : false" (click)="handleReaderClick($event)">
         <div #readingHtml [innerHtml]="page" *ngIf="page !== undefined"></div>
     </div>
 
