Responsive top for sticky header

--- a/src/app/shared/drawer/drawer.component.html
+++ b/src/app/shared/drawer/drawer.component.html
@@ -1,16 +1,6 @@
-<!-- 
-
-<div class="side-pane-drawer-container" [ngStyle]="drawerStyles">
-    <div class="drawer-container">
-        <button type="button" class="close" aria-label="Close" (click)="close()">
-            <span aria-hidden="true">&times;</span>
-        </button>
-        <ng-content></ng-content>
-    </div>
-</div> -->
-
 <div
   class="drawer-container"
+  [ngStyle]="{'top': options.topOffset + 'px'}"
   [class.is-open]="isOpen"
   [class.position-right]="position === 'right'"
   [class.position-left]="position === 'left'"
