--- a/src/app/user-preferences/user-preferences.component.html
+++ b/src/app/user-preferences/user-preferences.component.html
@@ -7,6 +7,7 @@
         <ngb-panel id="reading-panel" title="Reading">
             <ng-template ngbPanelContent>
                 <form [formGroup]="settingsForm" *ngIf="user !== undefined">
+                    <h3>Manga</h3>
                     <div class="form-group">
                         <label for="settings-reading-direction">Reading Direction</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="readingDirectionTooltip" role="button" tabindex="0"></i>
                         <ng-template #readingDirectionTooltip>Direction to click to move to next page. Right to Left means you click on left side of screen to move to next page.</ng-template>
@@ -32,6 +33,46 @@
                         <select class="form-control" aria-describedby="settings-pagesplit-option-help" formControlName="pageSplitOption">
                             <option *ngFor="let opt of pageSplitOptions" [value]="opt.value">{{opt.text | titlecase}}</option>
                         </select>
+                    </div>
+                    <hr>
+                    <h3>Books</h3>
+                    <div class="form-group">
+                        <label id="dark-mode-label">Dark Mode</label>
+                        <div class="form-group">
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="dark-mode" formControlName="bookReaderDarkMode" class="custom-control-input" [value]="true" aria-labelledby="dark-mode-label">
+                                <label class="custom-control-label" for="dark-mode">True</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="not-dark-mode" formControlName="bookReaderDarkMode" class="custom-control-input" [value]="false" aria-labelledby="dark-mode-label">
+                                <label class="custom-control-label" for="not-dark-mode">False</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="settings-fontfamily-option">Font Family</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="fontFamilyOptionTooltip" role="button" tabindex="0"></i>
+                        <ng-template #fontFamilyOptionTooltip>Default Font familty to load up. Default will load the book's default font</ng-template>
+                        <span class="sr-only" id="settings-fontfamily-option-help">Default Font familty to load up. Default will load the book's default font</span>
+                        <select class="form-control" aria-describedby="settings-fontfamily-option-help" formControlName="bookReaderFontFamily">
+                            <option *ngFor="let opt of fontFamilies" [value]="opt">{{opt | titlecase}}</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label id="font-size">Font Size</label>
+                        <ngx-slider [options]="bookReaderFontSizeOptions" formControlName="bookReaderFontSize" aria-labelledby="font-size"></ngx-slider>
+                    </div>
+                    <div class="form-group">
+                        <label>Line Height</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="bookLineHeightOptionTooltip" role="button" tabindex="0"></i>
+                        <ng-template #bookLineHeightOptionTooltip>How much spacing between the lines of the book</ng-template>
+                        <span class="sr-only" id="settings-booklineheight-option-help">How much spacing between the lines of the book</span>
+                        <ngx-slider [options]="bookReaderLineSpacingOptions" formControlName="bookReaderLineSpacing" aria-describedby="settings-booklineheight-option-help"></ngx-slider>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Margin</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="bookReaderMarginOptionTooltip" role="button" tabindex="0"></i>
+                        <ng-template #bookReaderMarginOptionTooltip>How much spacing on each side of the screen. This will override to 0 on mobile devices regardless of this setting.</ng-template>
+                        <span class="sr-only" id="settings-bookmargin-option-help">How much spacing on each side of the screen. This will override to 0 on mobile devices regardless of this setting.</span>
+                        <ngx-slider [options]="bookReaderMarginOptions" formControlName="bookReaderMargin" aria-describedby="bookmargin"></ngx-slider>
                     </div>
 
                     <div class="float-right mb-3">
