--- a/src/app/user-preferences/user-preferences.component.html
+++ b/src/app/user-preferences/user-preferences.component.html
@@ -9,7 +9,7 @@
                 <form [formGroup]="settingsForm" *ngIf="user !== undefined">
                     <h3>Manga</h3>
                     <div class="form-group">
-                        <label for="settings-reading-direction">Reading Direction</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="readingDirectionTooltip" role="button" tabindex="0"></i>
+                        <label for="settings-reading-direction">Reading Direction</label>&nbsp;<i class="fa fa-info-circle" aria-hidden="true" placement="right" [ngbTooltip]="readingDirectionTooltip" role="button" tabindex="0"></i>
                         <ng-template #readingDirectionTooltip>Direction to click to move to next page. Right to Left means you click on left side of screen to move to next page.</ng-template>
                         <span class="sr-only" id="settings-reading-direction-help">Direction to click to move to next page. Right to Left means you click on left side of screen to move to next page.</span>
                         <select class="form-control" aria-describedby="settings-reading-direction-help" formControlName="readingDirection">
@@ -18,7 +18,7 @@
                     </div>
             
                     <div class="form-group">
-                        <label for="settings-scaling-option">Scaling Options</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="taskBackupTooltip" role="button" tabindex="0"></i>
+                        <label for="settings-scaling-option">Scaling Options</label>&nbsp;<i class="fa fa-info-circle" aria-hidden="true" placement="right" [ngbTooltip]="taskBackupTooltip" role="button" tabindex="0"></i>
                         <ng-template #taskBackupTooltip>How to scale the image to your screen.</ng-template>
                         <span class="sr-only" id="settings-scaling-option-help">How to scale the image to your screen.</span>
                         <select class="form-control" aria-describedby="settings-scaling-option-help" formControlName="scalingOption">
@@ -27,7 +27,7 @@
                     </div>
             
                     <div class="form-group">
-                        <label for="settings-pagesplit-option">Page Splitting</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="pageSplitOptionTooltip" role="button" tabindex="0"></i>
+                        <label for="settings-pagesplit-option">Page Splitting</label>&nbsp;<i class="fa fa-info-circle" aria-hidden="true" placement="right" [ngbTooltip]="pageSplitOptionTooltip" role="button" tabindex="0"></i>
                         <ng-template #pageSplitOptionTooltip>How to split a full width image (ie both left and right images are combined)</ng-template>
                         <span class="sr-only" id="settings-pagesplit-option-help">How to split a full width image (ie both left and right images are combined)</span>
                         <select class="form-control" aria-describedby="settings-pagesplit-option-help" formControlName="pageSplitOption">
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="settings-fontfamily-option">Font Family</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="fontFamilyOptionTooltip" role="button" tabindex="0"></i>
+                        <label for="settings-fontfamily-option">Font Family</label>&nbsp;<i class="fa fa-info-circle" aria-hidden="true" placement="right" [ngbTooltip]="fontFamilyOptionTooltip" role="button" tabindex="0"></i>
                         <ng-template #fontFamilyOptionTooltip>Default Font familty to load up. Default will load the book's default font</ng-template>
                         <span class="sr-only" id="settings-fontfamily-option-help">Default Font familty to load up. Default will load the book's default font</span>
                         <select class="form-control" aria-describedby="settings-fontfamily-option-help" formControlName="bookReaderFontFamily">
@@ -62,14 +62,14 @@
                         <ngx-slider [options]="bookReaderFontSizeOptions" formControlName="bookReaderFontSize" aria-labelledby="font-size"></ngx-slider>
                     </div>
                     <div class="form-group">
-                        <label>Line Height</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="bookLineHeightOptionTooltip" role="button" tabindex="0"></i>
+                        <label>Line Height</label>&nbsp;<i class="fa fa-info-circle" aria-hidden="true" placement="right" [ngbTooltip]="bookLineHeightOptionTooltip" role="button" tabindex="0"></i>
                         <ng-template #bookLineHeightOptionTooltip>How much spacing between the lines of the book</ng-template>
                         <span class="sr-only" id="settings-booklineheight-option-help">How much spacing between the lines of the book</span>
                         <ngx-slider [options]="bookReaderLineSpacingOptions" formControlName="bookReaderLineSpacing" aria-describedby="settings-booklineheight-option-help"></ngx-slider>
                     </div>
 
                     <div class="form-group">
-                        <label>Margin</label>&nbsp;<i class="fa fa-info-circle" placement="right" [ngbTooltip]="bookReaderMarginOptionTooltip" role="button" tabindex="0"></i>
+                        <label>Margin</label>&nbsp;<i class="fa fa-info-circle" aria-hidden="true" placement="right" [ngbTooltip]="bookReaderMarginOptionTooltip" role="button" tabindex="0"></i>
                         <ng-template #bookReaderMarginOptionTooltip>How much spacing on each side of the screen. This will override to 0 on mobile devices regardless of this setting.</ng-template>
                         <span class="sr-only" id="settings-bookmargin-option-help">How much spacing on each side of the screen. This will override to 0 on mobile devices regardless of this setting.</span>
                         <ngx-slider [options]="bookReaderMarginOptions" formControlName="bookReaderMargin" aria-describedby="bookmargin"></ngx-slider>
