--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -62,6 +62,9 @@
                 <hr>
                 <div class="table-of-contents">
                     <h3>Table of Contents</h3>
+                    <div *ngIf="chapters.length === 0">
+                        <i>This book does not have Table of Contents set in the metadata</i>
+                    </div>
                     <div *ngIf="chapters.length === 1; else nestedChildren">
                         <ul>
                             <li *ngFor="let chapter of chapters[0].children">
