Fix code smells

--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -63,7 +63,7 @@
                 <div class="table-of-contents">
                     <h3>Table of Contents</h3>
                     <div *ngIf="chapters.length === 0">
-                        <i>This book does not have Table of Contents set in the metadata</i>
+                        <em>This book does not have Table of Contents set in the metadata</em>
                     </div>
                     <div *ngIf="chapters.length === 1; else nestedChildren">
                         <ul>
