--- a/src/app/nav-header/nav-header.component.html
+++ b/src/app/nav-header/nav-header.component.html
@@ -5,7 +5,7 @@
       <ul class="navbar-nav mr-auto">
         
         <div class="nav-item" *ngIf="(accountService.currentUser$ | async) as user">
-          <div > <!-- class="col-xs-4 col-md-6" style="padding-right: 0px"-->
+          <div>
             <fieldset class="form-inline">
               <div class="form-group" style="margin-bottom: 0px;">
                 <label for="nav-search" class="sr-only">Search series</label>
