--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,8 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap/scss/mixins/_breakpoints.scss';
+@import '~swiper/swiper-bundle';
+
 
 
 @font-face {
