--- a/src/app/shared/card-item/card-item.component.scss
+++ b/src/app/shared/card-item/card-item.component.scss
@@ -24,6 +24,7 @@ $image-width: 160px;
     cursor: pointer;
     padding-left: 0px;
     padding-right: 0px;
+    box-sizing: border-box;
 }
 
 .card-title {
