Cleaned up menu for manga reader and changed how automatic scaling works, based on ratio of width to height rather than raw numbers.

--- a/src/app/manga-reader/manga-reader.component.html
+++ b/src/app/manga-reader/manga-reader.component.html
@@ -40,10 +40,10 @@
                     <form [formGroup]="fittingForm">
                         <div class="btn-group btn-group-toggle" ngbRadioGroup name="radioBasic" formControlName="fittingOption">
                             <label ngbButtonLabel class="btn-primary">
-                            <input ngbButton type="radio" value="full-height"> <span class="phone-hidden">Fit to </span>Height
+                            <input ngbButton type="radio" value="full-height">Height
                             </label>
                             <label ngbButtonLabel class="btn-primary">
-                            <input ngbButton type="radio" value="full-width"> <span class="phone-hidden">Fit to </span>Width
+                            <input ngbButton type="radio" value="full-width">Width
                             </label>
                             <label ngbButtonLabel class="btn-primary">
                             <input ngbButton type="radio" value="original"> Original
@@ -63,7 +63,7 @@
                             <input ngbButton type="radio" value="0"><span class="not-phone-hidden">L2R</span><span class="phone-hidden">Left to Right</span>
                             </label>
                             <label ngbButtonLabel class="btn-primary">
-                            <input ngbButton type="radio" value="2"><span class="not-phone-hidden">None</span><span class="phone-hidden">No Split</span>
+                            <input ngbButton type="radio" value="2"><span class="not-phone-hidden">None</span><span class="phone-hidden">None</span>
                             </label>
                         </div>
                     </form>
