Dark mode and click to paginate was conflicting. The hint overlay still doesn't work when dark mode is on.

--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -52,7 +52,7 @@
                         <label id="tap-pagination">Tap Pagination&nbsp;<i class="fa fa-info-circle" aria-hidden="true" placement="top" [ngbTooltip]="tapPaginationTooltip" role="button" tabindex="0" aria-describedby="tap-pagination-help"></i></label>
                         <ng-template #tapPaginationTooltip>The ability to click the sides of the page to page left and right</ng-template>
                         <span class="sr-only" id="tap-pagination-help">The ability to click the sides of the page to page left and right</span>
-                        <button (click)="toggleClickToPaginate()" class="btn btn-icon" aria-labelledby="tap-pagination"><i class="fa fa-arrows-alt-h {{clickToPaginate ? 'icon-primary-color' : ''}}" aria-hidden="true"></i></button>
+                        <button (click)="toggleClickToPaginate()" class="btn btn-icon" aria-labelledby="tap-pagination"><i class="fa fa-arrows-alt-h {{clickToPaginate ? 'icon-primary-color' : ''}}" aria-hidden="true"></i><span *ngIf="darkMode">&nbsp;{{clickToPaginate ? 'On' : 'Off'}}</span></button>
                         <!-- <button (click)="showClickToPaginateVisualOverlay()" class="btn btn-icon" aria-labelledby="tap-pagination"><i class="fa fa-fill-drip  {{clickToPaginateVisualOverlay ? 'icon-primary-color' : ''}}" aria-hidden="true"></i></button> -->
                     </div>
                     <div class="row no-gutters justify-content-between">
