Cleaned up styles on slider to be closer to size of cards

--- a/src/app/carousel/carousel-reel/carousel-reel.component.html
+++ b/src/app/carousel/carousel-reel/carousel-reel.component.html
@@ -10,6 +10,7 @@
         <swiper
             [slidesPerView]="'auto'"
             (swiper)="onSwiper($event)"
+            [cssMode]="true"
             [breakpoints]="slidesPerBreakpoint"
             [freeMode]="true">
             <ng-template *ngFor="let item of items; index as i" swiperSlide>
