--- a/src/app/nav-header/nav-header.component.html
+++ b/src/app/nav-header/nav-header.component.html
@@ -64,5 +64,6 @@
         </div>
       </div>
     </div>
+    <!-- Idea: Put a loading indicator bar here for when something is loading -->
 </nav>
   
