--- a/src/app/library-detail/library-detail.component.scss
+++ b/src/app/library-detail/library-detail.component.scss
@@ -1,3 +1,6 @@
+//@import url(../../assets/themes/plex/_variables.scss);
+$primary-color: #0062cc;
+
 .card {
     height: 400;
     width: 200;
@@ -8,4 +11,14 @@
     width: 600px;
     height: 100%;
     overflow-y: auto;
-  }
+}
+
+.filter-bar {
+    padding-left: 20px; // double because we are a nested row
+    padding-right: 15px;
+    border-bottom: 1px solid lightgrey;
+}
+
+.icon--active {
+    color: $primary-color;
+}
