--- a/src/app/user-preferences/user-preferences.component.html
+++ b/src/app/user-preferences/user-preferences.component.html
@@ -50,6 +50,21 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label id="taptopaginate-label">Tap to Paginate</label>&nbsp;<i class="fa fa-info-circle" aria-hidden="true" placement="right" [ngbTooltip]="tapToPaginateOptionTooltip" role="button" tabindex="0"></i>
+                        <ng-template #tapToPaginateOptionTooltip>Should the sides of the book reader screen allow tapping on it to move to prev/next page</ng-template>
+                        <span class="sr-only" id="settings-taptopaginate-option-help">Should the sides of the book reader screen allow tapping on it to move to prev/next page</span>
+                        <div class="form-group">
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="taptopaginate" formControlName="bookReaderTapToPaginate" class="custom-control-input" [value]="true" aria-labelledby="taptopaginate-label">
+                                <label class="custom-control-label" for="taptopaginate">True</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="not-taptopaginate" formControlName="bookReaderTapToPaginate" class="custom-control-input" [value]="false" aria-labelledby="taptopaginate-label">
+                                <label class="custom-control-label" for="not-taptopaginate">False</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="settings-fontfamily-option">Font Family</label>&nbsp;<i class="fa fa-info-circle" aria-hidden="true" placement="right" [ngbTooltip]="fontFamilyOptionTooltip" role="button" tabindex="0"></i>
                         <ng-template #fontFamilyOptionTooltip>Default Font familty to load up. Default will load the book's default font</ng-template>
                         <span class="sr-only" id="settings-fontfamily-option-help">Default Font familty to load up. Default will load the book's default font</span>
