Fix a regression where book reader would +1 pageNum for bookmarking on last page, but because books don't start at 0 for page nums, it isn't necessariy

--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -59,7 +59,7 @@
                         <button (click)="saveSettings()" class="btn btn-primary col" style="margin-left:10px;">Save</button>
                     </div>
                 </div>
-                <ngb-progressbar style="cursor: pointer" (click)="goToPage()" type="warning" height="5px" [value]="pageNum" [max]="maxPages - 1"></ngb-progressbar>
+                <ngb-progressbar style="cursor: pointer" title="Go to page" (click)="goToPage()" type="warning" height="5px" [value]="pageNum" [max]="maxPages - 1"></ngb-progressbar>
                 <div class="table-of-contents">
                     <h3>Table of Contents</h3>
                     <div *ngIf="chapters.length === 0">
